InternalFrameDemo + DemoJXFrame (Baustelle)
wg https://github.com/homebeaver/SwingSet/issues/25