@@ -1,12 +1,18 @@
 package io.github.homebeaver.swingset.demo;
 
+import java.awt.AWTEvent;
 import java.awt.BorderLayout;
+import java.awt.Component;
 import java.awt.Font;
+import java.awt.Color;
 import java.awt.GraphicsEnvironment;
 import java.awt.Window;
 import java.awt.event.ActionEvent;
+import java.awt.peer.FramePeer;
 import java.beans.PropertyChangeListener;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.List;
@@ -21,20 +27,27 @@ import javax.swing.ButtonGroup;
 import javax.swing.JButton;
 import javax.swing.JComponent;
 import javax.swing.JFrame;
+import javax.swing.JLayeredPane;
 import javax.swing.JMenu;
 import javax.swing.JMenuBar;
 import javax.swing.JMenuItem;
 import javax.swing.JRadioButtonMenuItem;
+import javax.swing.JRootPane;
 import javax.swing.JToggleButton;
 import javax.swing.JToolBar;
 import javax.swing.SwingUtilities;
 import javax.swing.UIManager;
 import javax.swing.UIManager.LookAndFeelInfo;
+import javax.swing.plaf.RootPaneUI;
 import javax.swing.plaf.metal.MetalLookAndFeel;
+import javax.swing.plaf.metal.MetalRootPaneUI;
+import javax.swing.plaf.metal.MetalTheme;
+//import javax.swing.plaf.metal.MetalTitlePane; // not visible
 import javax.swing.plaf.metal.MetalTheme;
 
 import org.jdesktop.swingx.JXFrame;
 import org.jdesktop.swingx.JXPanel;
+import org.jdesktop.swingx.JXRootPane;
 import org.jdesktop.swingx.JXStatusBar;
 import org.jdesktop.swingx.SwingXUtilities;
 import org.jdesktop.swingx.action.AbstractActionExt;
@@ -85,45 +98,16 @@ public class DemoJXFrame extends JXFrame {
 	private int window_ID;
 	JXPanel jPanel = new JXPanel(new BorderLayout());
 	
-	@Deprecated // not used
-	static private void initialTheme(String themeClassName) {
-		String plaf = METAL;
-        try {
-            UIManager.setLookAndFeel(plaf);
-        } catch (Exception e1) {
-            e1.printStackTrace();
-            LOG.log(Level.FINE, "problem in setting laf: " + plaf, e1);
-        }
-
-		Class<?> themeClass = null;
-		MetalTheme theme = null;
-		try {
-			themeClass = Class.forName(themeClassName); // throws ClassNotFoundException
-		} catch (Exception e) {
-			LOG.warning("Error occurred loading class: "+themeClassName);
-			e.printStackTrace();
-		}
-		try {
-			theme = (MetalTheme)themeClass.getDeclaredConstructor().newInstance();
-		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
-				| InvocationTargetException | NoSuchMethodException | SecurityException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		}
-		LOG.info(">>>>>>>>>>>>>>>>>theme:"+theme.getName());
-		MetalLookAndFeel.setCurrentTheme(theme);
-		LOG.info(">>>>>>>>>>>>>>>>>current:"+MetalLookAndFeel.getCurrentTheme());
-	}
 	// Einstellungen vor Frame ctor
 	static private boolean exitOnClose(int window_ID) {
         UIManager.put(UI_KEY_BOLDMETAL, Boolean.FALSE); // turn off bold fonts in Metal
         // dieser key gilt nicht für Frame Titel, das macht:
 		Font font = UIManager.getFont(UI_KEY_FRAME_TITLEFONT);
-		Object newFont = UIManager.put(UI_KEY_FRAME_TITLEFONT, new Font(font.getName(), Font.PLAIN, font.getSize()));
-		LOG.info(UI_KEY_FRAME_TITLEFONT+" changed to "+newFont + " was "+font);
+		UIManager.put(UI_KEY_FRAME_TITLEFONT, new Font(font.getName(), Font.PLAIN, font.getSize()));
+		LOG.info(UI_KEY_FRAME_TITLEFONT+" changed to "+UIManager.getFont(UI_KEY_FRAME_TITLEFONT) + " was "+font);
 			
 		LOG.info("InternalFrame.closeIcon:"+UIManager.getIcon("InternalFrame.closeIcon"));
-//		initialTheme(STEEL); // uncomment to start explicitly with STEEL
+
 		if(isMETAL() && window_ID!=-1) { // root Window always OS controlled ID==-1
 			// decorate Demo Frame Title with STEEL when LaF is METAL
 			// otherwise no decoration aka OS controlled
@@ -139,36 +123,88 @@ public class DemoJXFrame extends JXFrame {
 			, GraphicsEnvironment.getLocalGraphicsEnvironment().getDefaultScreenDevice().getDefaultConfiguration()
 			, exitOnClose(window_ID)
 			);
-        
-        /*
-         * Frame Title Background Color cannot be set. It is controlled by OS.
-         * see: https://stackoverflow.com/questions/2482971/how-to-change-the-color-of-titlebar-in-jframe
-         * default: isUndecorated=false WindowDecorationStyle=0 (NONE)
-         * activeCaption:ColorUIResource[r=184,g=207,b=229] #B8CFE5 / TROPICAL_BLUE
-         * activeCaptionText:sun.swing.PrintColorUIResource[r=51,g=51,b=51] #333333 / NIGHT_RIDER
-UIDefaults uiDefaults = UIManager.getDefaults();
-uiDefaults.put("activeCaption", new javax.swing.plaf.ColorUIResource(Color.gray));
-uiDefaults.put("activeCaptionText", new javax.swing.plaf.ColorUIResource(Color.white));
-JFrame.setDefaultLookAndFeelDecorated(true);
-         */
-        // in XXX JFrame setBackground(UIManager.getColor("control")); [r=238,g=238,b=238] == EEEEEE
-        LOG.info(">>>>>>>>>>> UIManager.getColor(\"control\":"+UIManager.getColor("control")
-    		+" getBackground:"+super.getBackground() // ColorUIResource[r=238,g=238,b=238]
-        	+" activeCaption:"+UIManager.get("activeCaption")
-        	+" activeCaptionText:"+UIManager.get("activeCaptionText")
-        	+" JFrame.isDefaultLookAndFeelDecorated="+JFrame.isDefaultLookAndFeelDecorated() // false
-        	+"\n isUndecorated="+isUndecorated()+" WindowDecorationStyle="+getRootPane().getWindowDecorationStyle());
-        /*
-         * DefaultLookAndFeelDecorated ist false, ausser bei Metal.
-         * d.h. OS hat die Kontrolle über Frame Title Background.
-         * 
-         * Es sei denn, mann setzt es explizit:
-        JFrame.setDefaultLookAndFeelDecorated(true);
-         */
-
-//		super.setUndecorated(true);
-//		super.getRootPane().setWindowDecorationStyle(JRootPane.FRAME);
-       
+        //--------------------
+//		(FramePeer)this.peer; // not visible
+//        LOG.info(">>>>>>>>>>> UIManager.getColor(\"control\":"+UIManager.getColor("control")
+//    		+" getBackground:"+super.getBackground() // ColorUIResource[r=238,g=238,b=238]
+//        	+" activeCaption:"+UIManager.get("activeCaption")
+//        	+" activeCaptionText:"+UIManager.get("activeCaptionText")
+//        	+" JFrame.isDefaultLookAndFeelDecorated="+JFrame.isDefaultLookAndFeelDecorated() // false
+//        	+"\n isUndecorated="+isUndecorated()+" WindowDecorationStyle="+getRootPane().getWindowDecorationStyle());
+//		super.getType();
+//		super.getBackground();
+//		Component[] comps = super.rootPane.getLayeredPane().getComponentsInLayer(JLayeredPane.FRAME_CONTENT_LAYER);
+//		LOG.info("------Type="+getType()+" --BG="+getBackground()+"-----rootPane.LayeredPane:"
+//		+comps.length);
+//		for(int i=0; i<comps.length;i++) {
+//			Component c = comps[i];
+//			LOG.info(""+i+":"+c);
+//			if(i==1) {
+//				JComponent jc = (JComponent)c;
+//				LOG.info("!!!!!!!! "+jc.getUI()+" >>>>>>>>>>>> replace:"+c.getBackground());
+//				jc.setBackground(Color.YELLOW);
+//			}
+//		}
+		
+		
+		
+		
+//		LOG.info("------Type="+getType()+" --BG="+getBackground()+"-----rootPane.getUI:"+super.rootPane.getUI());
+//		MetalRootPaneUI obj = (MetalRootPaneUI)super.rootPane.getUI();
+////		rpui.getTitlePane(); //private <<<<<<<<<<<<<<<<<<<
+////		private JComponent titlePane;
+//		JComponent titlePane = null;
+//		Field field = null;
+//		String fieldName = "titlePane";
+////		try {
+////			field = obj.getClass().getDeclaredField(fieldName);
+////			field.setAccessible(true); // <<<<<<<<<<< ExceptionInInitializerError
+////			Object o = field.get(obj);
+////			LOG.info("<<<<<< titlePane:"+o);
+////			titlePane = (JComponent)o;
+////		} catch (NoSuchFieldException | SecurityException | IllegalArgumentException
+////				| IllegalAccessException 
+//////				| InstantiationException 
+////				e) {
+////			LOG.warning(obj.getClass().getSimpleName() +"."+fieldName + ": Exception:"+e);
+////			e.printStackTrace();		
+////		}
+///*
+//Exception in thread "main" java.lang.ExceptionInInitializerError
+//Caused by: java.lang.reflect.InaccessibleObjectException: Unable to make field private javax.swing.JComponent javax.swing.plaf.metal.MetalRootPaneUI.titlePane accessible: module java.desktop does not "opens javax.swing.plaf.metal" to unnamed module @7d9d1a19
+//	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:354)
+//	at java.base/java.lang.reflect.AccessibleObject.checkCanSetAccessible(AccessibleObject.java:297)
+//	at java.base/java.lang.reflect.Field.checkCanSetAccessible(Field.java:178)
+//	at java.base/java.lang.reflect.Field.setAccessible(Field.java:172)
+//	at io.github.homebeaver.swingset.demo.DemoJXFrame.<init>(DemoJXFrame.java:156)
+//	at io.github.homebeaver.swingset.demo.DemoJXFrame.<init>(DemoJXFrame.java:183)
+//	at io.github.homebeaver.swingset.demo.MainJXframe.<init>(MainJXframe.java:120)
+//	at io.github.homebeaver.swingset.demo.MainJXframe.<clinit>(MainJXframe.java:108)
+//
+//Caused by: java.lang.reflect.InaccessibleObjectException: 
+//Unable to make private javax.swing.JComponent javax.swing.plaf.metal.MetalRootPaneUI.getTitlePane() accessible: 
+//module java.desktop does not "opens javax.swing.plaf.metal" to unnamed module @642d0eee
+//
+//LÖSUNG: siehe https://stackoverflow.com/questions/41265266/how-to-solve-inaccessibleobjectexception-unable-to-make-member-accessible-m
+//--add-opens java.desktop/javax.swing.plaf.metal=ALL-UNNAMED
+// */
+//		String methodName = "getTitlePane";
+//		try {
+//			Method get = MetalRootPaneUI.class.getDeclaredMethod(methodName);
+//			get.setAccessible(true);
+//			Object o =get.invoke(obj);
+//			LOG.info("!!!!!!!! o:"+o);
+//			if(o!=null) {
+//				titlePane = (JComponent)o;
+//				LOG.info("!!!!!!!! replace:"+titlePane.getBackground());
+////				titlePane.setBackground(getBackground());
+//			}
+//		} catch (NoSuchMethodException | SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
+//			e.printStackTrace();
+//		}
+////		
+////		rpui.getNorthPane();
+        //--------------------
 		windowCounter++;
 		this.windowNo = windowCounter-1;
 		this.window_ID = window_ID;
@@ -186,6 +222,64 @@ JFrame.setDefaultLookAndFeelDecorated(true);
 		this(title, -1, null);
 	}
 
+	/* in JFRame:
+    protected void frameInit() {
+        enableEvents(AWTEvent.KEY_EVENT_MASK | AWTEvent.WINDOW_EVENT_MASK);
+        setLocale( JComponent.getDefaultLocale() );
+        setRootPane(createRootPane());
+        setBackground(UIManager.getColor("control"));
+        setRootPaneCheckingEnabled(true);
+        if (JFrame.isDefaultLookAndFeelDecorated()) {
+            boolean supportsWindowDecorations =
+            UIManager.getLookAndFeel().getSupportsWindowDecorations();
+            if (supportsWindowDecorations) {
+                setUndecorated(true);
+                getRootPane().setWindowDecorationStyle(JRootPane.FRAME);
+            }
+        }
+        sun.awt.SunToolkit.checkAndSetPolicy(this);
+    }
+
+		 */
+	protected void frameInit() {
+		LOG.info("-----statt super JFRame.frameInit() -------------wg LOG");
+		enableEvents(AWTEvent.KEY_EVENT_MASK | AWTEvent.WINDOW_EVENT_MASK);
+		setLocale( JComponent.getDefaultLocale() );
+		setRootPane(createRootPane());
+		setBackground(UIManager.getColor("control"));
+		setRootPaneCheckingEnabled(true);
+        if (JFrame.isDefaultLookAndFeelDecorated()) {
+            boolean supportsWindowDecorations = UIManager.getLookAndFeel().getSupportsWindowDecorations();
+            if (supportsWindowDecorations) {
+                setUndecorated(true);
+                getRootPane().setWindowDecorationStyle(JRootPane.FRAME);
+                Component[] comps = getRootPane().getLayeredPane().getComponentsInLayer(JLayeredPane.FRAME_CONTENT_LAYER);
+                for(int i=0; i<comps.length;i++) {
+                	Component c = comps[i];
+                	JComponent jc = (JComponent)c;
+                	LOG.info("---- "+i +":" +jc); // TODO Die Farbe activeBG setzten
+                }
+//                LOG.info("getRootPane().ContentPane "+((JXRootPane)(getRootPane().getContentPane())));
+                LOG.info("getRootPane().UI "+getRootPane().getUI()+" .setWindowDecorationStyle(JRootPane.FRAME)");
+//              javax.swing.plaf.metal.MetalRootPaneUI
+                RootPaneUI rootPaneUI = getRootPane().getUI();
+                MetalRootPaneUI metalRootPaneUI = (MetalRootPaneUI)rootPaneUI;
+//                rootPaneUI private JComponent getTitlePane()
+                /* private MetalTitlePane
+activeBG     javax.swing.plaf.ColorUIResource[r=184,g=207,b=229]
+activeShadow javax.swing.plaf.ColorUIResource[r=163,g=184,b=204]
+
+javax.swing.plaf.metal.MetalBumps@69e0b6f6
+
+activeBumpsHighlight javax.swing.plaf.ColorUIResource[r=255,g=255,b=255]
+activeBumpsShadow    javax.swing.plaf.ColorUIResource[r=99,g=130,b=191]
+
+                 */
+                LOG.info("----------");
+            }
+        }
+        //sun.awt.SunToolkit.checkAndSetPolicy(this);
+	}
 	public void setTitle(String title) {
 		super.setTitle("#"+this.windowNo+":"+title);
 	}
@@ -493,14 +587,6 @@ aus super:
             	MainJXframe rf = (MainJXframe)toplevel;
 //            	// themeMenu setEnabled when LAF is Metal
             	rf.themeMenu.setEnabled(isMETAL());
-//            	if(isMETAL()) {
-//            		rf.themeMenu.setEnabled(true);
-//        		LOG.info(">>> TODO setEnabled in Theme >>>>>>>>>>>>>>current:"+MetalLookAndFeel.getCurrentTheme());
-////        	        setDefaultLookAndFeelDecorated(UIManager.getLookAndFeel().getSupportsWindowDecorations());
-//            	} else {
-//            		rf.themeMenu.setEnabled(false);
-////        	        setDefaultLookAndFeelDecorated(false);
-//            	}
             	
                 // JPopupMenu Group (in AbstractActionExt) und JMenu Group synchronisieren:
             	Enumeration<AbstractButton> abEnum = rf.lafMenuGroup.getElements();
